2008-10-02 Frank Naegler  <typo3@naegler.net>

	* change the attribute name from dragable to draggable on all widgets

2008-10-01 Frank Naegler  <typo3@naegler.net>

	* added localizations to some widgets

2008-10-01 Ingo Renner  <ingo@typo3.org>

	* renamed the new group application to create group
	* added dedicated table for groups
	* removed extension fields for fegroups
	* changed the createGroup application to use the new dedicated table for groups
	* fixed bug in birthday list, the list should always show the birthdays of the requested user's friends
	* added the my groups widget
	* refactored the group gateway
	* moved the include for the localization manager into the community application controller
	* added a TS viewhelper to retrieve TS values
	* added a link viewhelper to create links on the fly
	* added the link viewhelper to the my groups user profile widget to build links to profile pages
	* extracted the group image into a separate group profile widget
	* changed the group profile information widget look more like thos found in other communities

2008-09-30 Ingo Renner  <ingo@typo3.org>

	* Fixed profile action links in the profile actions widget
	* Added a status field for friend relations
	* Changed the way friend relations are handled, now both users must be friends with the other
	* Added a method to the abstract community application controller to get an instance of the user gateway
	* Added an abstract view and changed all views to use this new abstract view
	* Added a new section in the TS configuration for common settings, for now contains a setting how dates should be rendered
	* Added getter and setter for the birthday property in the user model
	* Added a date viewhelper, that turns unix timestamps into human readable dates
	* Added the user profile friend birthday list widget

2008-09-30 Frank Naegler  <typo3@naegler.net>

	* adding GroupInformationWidget
	* added community logger to tx_community_Template